--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components{
+    .list1{
+        @apply before:content-["\200B"] flex justify-start items-center pt-2 pr-2 pb-2 my-1 bg-gray-200 first:m-0;
+    }
+    .input1{
+        @apply text-center w-10 min-w-10 h-10 min-h-10 cursor-pointer mr-2;
+    }
+    .button1{
+        @apply w-12 h-9 text-blue-800 cursor-pointer focus:text-orange-600 hover:text-orange-600;
+    }
+    .btn{
+        @apply h-12 min-w-12 border-2 p-3 text-base bg-blue-700 text-white cursor-pointer hover:bg-green-500 hover:text-white hover:outline-none focus:text-white focus:bg-green-500 focus:outline-none;
+    }
+    .ip{
+        @apply grow w-full max-w-96 min-h-12 text-base p-1 border-2 border-purple-600 mr-1 outline-none;
+    }
+    .forms{
+        @apply border-4 border-orange-400 w-full flex justify-start mt-2 pr-2 pb-1;
+    }
 }
